services/obsidian-livesync/couchdb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    app.kubernetes.io/name: couchdb
spec:
  selector:
    app.kubernetes.io/name: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: http
    - name: metrics
      port: 17986
      targetPort: metrics
