services/obsidian-livesync/couchdb.ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: couchdb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: couchdb
  ingress:
    # The Gateway's Envoy (reserved identity "ingress"). The empty HTTP rule allows every request and only
    # makes Envoy parse it for Hubble's L7 metrics.
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
          rules:
            http:
              - {}
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "17986"
              protocol: TCP
